# agentspyboo

./: .gitignore  Cargo.toml  PHASE-1.5-NOTES.md  PHASE-2-NOTES.md  PHASE-2-RECON.md  PHASE-2.5-NOTES.md  PHASE-4-SPEC.md  README.md  RESEARCH.md
assets/: ffuf-common-mini.txt
docs/: pius-api-keys.md
findings/: example.com-20260414T025410Z.json  example.com-20260414T025740Z.json  gitlab.com-20260416T203447Z.json  gitlab.com-20260416T225152Z.json  gitlab.com-20260416T230856Z.json  hackerone.com-20260414T025940Z.json  hackerone.com-20260414T154714Z.json  hackerone.com-20260415T030240Z.json  peterc3-dev.github.io-20260415T093404Z.json  peterc3-dev.github.io-20260510T170336Z.json
reports/: example.com-20260414T025410Z.md  example.com-20260414T025740Z.md  example.com-20260510T164751Z.md  gitlab.com-20260416T203447Z.md  gitlab.com-20260416T225152Z.md  gitlab.com-20260416T230856Z.md  hackerone.com-20260414T025940Z.md  hackerone.com-20260414T154714Z.md  hackerone.com-20260415T030240Z.md  peterc3-dev.github.io-20260415T093404Z.md  peterc3-dev.github.io-20260510T170336Z.md
src/: config.rs  main.rs  scope.rs
src/agent/: mod.rs  planner.rs  react_loop.rs  state.rs
src/findings/: db.rs  dedup.rs  mod.rs  models.rs  parse.rs
src/llm/: client.rs  mod.rs  parser.rs  prompt.rs
src/preflight/: mod.rs  pius.rs
src/report/: generator.rs  mod.rs  templates.rs
src/tools/: dnsx.rs  ffuf.rs  findomain.rs  gau.rs  httpx.rs  locate.rs  mod.rs  naabu.rs  nmap.rs  nuclei.rs  registry.rs  subfinder.rs
