[package]
name = "agentspyboo"
version = "0.1.0"
edition = "2021"
description = "Rust-based AI red team agent for autonomous penetration testing on AMD NPU"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
