[package]
name = "agentspyboo"
version = "0.1.0"
edition = "2021"
description = "Rust-based AI red team agent for autonomous penetration testing on AMD NPU"
license = "MIT"

[[bin]]
name = "agentspyboo"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
